--- a/src/main/resources/static/css/usermessage.css
+++ b/src/main/resources/static/css/usermessage.css
@@ -701,3 +701,41 @@ a:hover{
     background-image:none;
     border-radius: 15px;
 }
+
+/*產品詳情*/
+.ilizi .box .box_1 h5{
+    margin: 0;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 34px;
+    color: #ff6700;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-left: solid 5px #ff6700;
+    text-indent: 15px;
+    text-align: left;
+}
+.ilizi .box .box_1 table tbody tr th{
+    border: 3px solid #e0e0e0;
+    padding: 10px;
+    font-size: 14px;
+    text-align: center;
+}
+.ilizi .box .box_1 table tbody tr td{
+    border: 3px solid #e0e0e0;
+    padding: 10px;
+    font-size: 14px;
+    text-align: center;
+}
+.ilizi .box .box_1 h5 .returncart{
+    text-indent: 0px;
+    padding: 3px 15px;
+    background-color: #ff6700;
+    border-radius: 15px;
+    color: #fff;
+    font-weight: initial;
+    display: inline-block;
+    float: right;
+}
+
+
