--- a/src/main/resources/templates/userdetail.html
+++ b/src/main/resources/templates/userdetail.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-    <div class="my_list_details" th:fragment="userdetail">
+    <div class="my_list_details details_act" th:fragment="userdetail">
         <div class="ilizi cle">
             <div class="box">
                 <div class="box_1">
