--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -26,24 +26,29 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="col-xs-4 col-sm-4">
-        <a class="navbar-brand banner-icon" href="#" >
-            <img th:src="@{/images/logo.gif}" class="img-responsive center-block" style="max-width:initial;width: 100%">
-        </a>
+    <div class="container ">
+        <div class="col-xs-4 col-sm-4" style="">
+            <a class="navbar-brand banner-icon" href="#" >
+                <img th:src="@{/images/logo.gif}" class="img-responsive center-block" style="max-width:initial;width: 100%">
+            </a>
         </div>
-        <div  class="col-xs-4 col-sm-4">
+        <div  class="col-xs-5 col-sm-5 search_input">
+            <input type="text" class="form-control" style="width: 70%;" placeholder="請輸入關鍵詞" >
+            <button class="search_button" type="button">
+                搜  索
+            </button>
         </div>
-        <div  class="col-xs-2 col-sm-2">
+        <div  class="col-xs-1 col-sm-1">
         </div>
         <div class="btn-group navbar-brand col-xs-2 col-sm-2" role="group" style="margin-top:1vh">
-                <a class="navbar-brand dropdown-toggle shipping-cart" type="button" data-toggle="dropdown"  href="#" > 用戶信息</a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Dropdown link</a></li>
-                    <li><a href="#">Dropdown link</a></li>
-                </ul>
+            <a class="navbar-brand dropdown-toggle shipping-cart" type="button" data-toggle="dropdown"  href="#" > 用戶信息</a>
+            <ul class="dropdown-menu">
+                <li><a href="#">Dropdown link</a></li>
+                <li><a href="#">Dropdown link</a></li>
+            </ul>
         </div>
     </div>
+
 
 </div>
 
