--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -7,7 +7,54 @@
 <body>
 <footer class="navbar-fixed-bottom">
 <div th:fragment="copyright" >
-    &copy; 2016 - 2019 版權所有，並保留所有權利。
+    <div class="container">
+        <div class="footer-block">
+            <div class="footer-link">
+                <div class="footer-img">
+                    <img src="/images/footer1.png">
+                </div>
+                <div class="footer-text">
+                    <p class="message-tip">新手上路</p>
+                    <p class="message">售後流程</p>
+                    <p class="message">購物流程</p>
+                    <p class="message">訂購流程</p>
+                </div>
+            </div>
+            <div class="footer-link">
+                <div class="footer-img">
+                    <img src="/images/footer2.png">
+                </div>
+                <div class="footer-text">
+                    <p class="message-tip">購物指南</p>
+                    <p class="message">訂購流程</p>
+                    <p class="message">註冊新會員</p>
+                    <p class="message">聯繫客服</p>
+                </div>
+            </div>
+            <div class="footer-link">
+                <div class="footer-img">
+                    <img src="/images/footer3.png">
+                </div>
+                <div class="footer-text">
+                    <p class="message-tip">售後服務</p>
+                    <p class="message">退換貨原則</p>
+                    <p class="message">售後服務保證</p>
+                    <p class="message">換貨流程</p>
+                    <p class="message">退款說明</p>
+                </div>
+            </div>
+            <div class="footer-link">
+                <div class="footer-img">
+                    <img src="/images/footer4.png">
+                </div>
+                <div class="footer-text">
+                    <p class="message-tip">關於我們</p>
+                    <p class="message">投訴與建議</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div><p>&copy; 2016 - 2019 版權所有，並保留所有權利。</p></div>
 </div>
 </footer>
 </body>
