--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -167,6 +167,7 @@
         </div>
     </div>
 </div>
+<div class="spaced"></div>
 <!--content end-->
 
 
@@ -204,6 +205,9 @@
     </div>
 </div>
 <!--滾動導航欄 end-->
+
+<!--footer-->
+<div class="text-center" th:include="footer :: copyright"></div>
 
 </body>
 <script th:src="@{/jquery/jquery-3.3.1.min.js}"></script>
