--- a/src/main/resources/static/header/css/header.css
+++ b/src/main/resources/static/header/css/header.css
@@ -80,6 +80,7 @@
     border-bottom:1px solid #ccc;
     background-color:#fff;
 }
+
 .container .search_input{
     padding:29px 0px;
 }
@@ -115,6 +116,7 @@
     line-height: 1.5em;
     position: inherit;
     width: auto;
+    margin-top: 2rem;
 }
 .footer-link{
     display: block;
@@ -140,4 +142,18 @@
 }
 .footer-text .message{
     color:#605046;
+}
+/*空欄 css*/
+.spaced{
+    margin-top:2rem;
+    border-bottom:1px solid #e6e6e6;
+}
+
+/*首頁 page*/
+.index-page{
+    padding-right:5px;
+    padding-left: 5px;
+}
+.caption{
+    padding-left: 5px;
 }
