--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -50,77 +50,24 @@
             <div id="myTabContent" class="tab-content">
                 <div class="tab-pane fade in active" id="home">
                     <div class="row">
-                        <div class="col-xs-3 col-sm-6 col-md-3">
-                            <div class="thumbnail">
-                                <img th:src="@{/images/1544753394217036280.jpg}"
-                                     alt="通用的占位符缩略图">
-                                <div class="caption">
-                                    <h3>缩略图标签</h3>
-                                    <p>一些示例文本。一些示例文本。</p>
-                                    <p>
-                                        <a href="#" class="btn btn-primary" role="button">
-                                            按钮
-                                        </a>
-                                        <a href="#" class="btn btn-default" role="button">
-                                            按钮
-                                        </a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-3 col-sm-6 col-md-3">
-                            <div class="thumbnail">
-                                <img th:src="@{/images/1544753394217036280.jpg}"
-                                     alt="通用的占位符缩略图">
-                                <div class="caption">
-                                    <h3>缩略图标签</h3>
-                                    <p>一些示例文本。一些示例文本。</p>
-                                    <p>
-                                        <a href="#" class="btn btn-primary" role="button">
-                                            按钮
-                                        </a>
-                                        <a href="#" class="btn btn-default" role="button">
-                                            按钮
-                                        </a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-3 col-sm-6 col-md-3">
-                            <div class="thumbnail">
-                                <img th:src="@{/images/1544753394217036280.jpg}"
-                                     alt="通用的占位符缩略图">
-                                <div class="caption">
-                                    <h3>缩略图标签</h3>
-                                    <p>一些示例文本。一些示例文本。</p>
-                                    <p>
-                                        <a href="#" class="btn btn-primary" role="button">
-                                            按钮
-                                        </a>
-                                        <a href="#" class="btn btn-default" role="button">
-                                            按钮
-                                        </a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-3 col-sm-6 col-md-3">
-                            <div class="thumbnail">
-                                <img th:src="@{/images/1544753394217036280.jpg}"
-                                     alt="通用的占位符缩略图">
-                                <div class="caption">
-                                    <h3>缩略图标签</h3>
-                                    <p>一些示例文本。一些示例文本。</p>
-                                    <p>
-                                        <a href="#" class="btn btn-primary" role="button">
-                                            按钮
-                                        </a>
-                                        <a href="#" class="btn btn-default" role="button">
-                                            按钮
-                                        </a>
-                                    </p>
-                                </div>
-                            </div>
+                                <table>
+                                    <tr th:each="goods:${recommend}">
+                                        <div class="col-xs-3 col-sm-6 col-md-3 index-page" >
+                                            <div style="box-shadow:0px 0px 5px #ccc;padding-bottom:5px">
+                                                <div class="thumbnail" style="padding: 0px">
+                                                    <img th:src=${goods.goods_img} alt="通用的占位符缩略图">
+                                                </div>
+                                                <div class="caption">
+                                                    <h4 th:text=${goods.goods_name} ></h4>
+                                                    <p th:text=${goods.goods_name} ></p>
+                                                    <p>
+                                                        <a th:href=${goods.goods_url} class="btn btn-primary" role="button" th:text=${goods.goods_addr} >按鈕</a>
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </tr>
+                                </table>
                         </div>
                     </div>
                 </div>
@@ -129,6 +76,8 @@
         <div class="col-xs-3 col-sm-3"></div>
     </div>
 <div  class="text-center" th:include="footer :: copyright"></div>
+
+
 <script th:src="@{/jquery/jquery-3.3.1.min.js}"></script>
 <script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
 <script th:inline="javascript">
