--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -20,10 +20,18 @@
     <!-- 轮播（Carousel）项目 -->
     <div class="carousel-inner">
         <div class="item active">
-            <img th:src="@{/images/20190102dsjsrs.jpg}" alt="First slide">
+            <a href="#" style="background-image:url(/images/20190102dsjsrs.jpg);    width: 100%;
+    height: 40vh;
+    display: block;
+    background-size: 100% 100%;" ></a>
+<!--            <img th:src="@{/images/20190102dsjsrs.jpg}" alt="First slide">-->
         </div>
         <div class="item">
-            <img th:src="@{/images/20190102fdxahh.jpg}" alt="Second slide">
+            <a href="#" style="background-image:url(/images/20190102dsjsrs.jpg);    width: 100%;
+    height: 40vh;
+    display: block;
+    background-size: 100% 100%;" ></a>
+<!--            <img th:src="@{/images/20190102fdxahh.jpg}" alt="Second slide">-->
         </div>
     </div>
 </div>
