--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -11,7 +11,7 @@
 
 <body>
 <!--header-->
-<div class="title" th:include="title::title"></div>
+<div class="header" th:include="header::header"></div>
 <!--header end-->
 
 <!--content 用戶頁面-->
@@ -100,5 +100,6 @@
 <script th:src="@{/jquery/jquery-3.3.1.min.js}"></script>
 <script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
 <script th:src="@{/jquery/user.js}"></script>
+<script th:src="@{/jquery/iconfont.js}"></script>
 </body>
 </html>
