--- a/src/main/resources/templates/user/usercenter.html
+++ b/src/main/resources/templates/user/usercenter.html
@@ -12,7 +12,7 @@
 
 <body>
 <!--header-->
-<div class="title" th:include="title::title"></div>
+<div class="header" th:include="header::header"></div>
 <!--header end-->
 
 <!--content 用戶中心 -->
