--- a/src/main/resources/static/header/css/header.css
+++ b/src/main/resources/static/header/css/header.css
@@ -1,4 +1,7 @@
 /*header css*/
+a{
+    text-decoration: none;
+}
 .banner-icon{
     height:100%;
     padding:15px 0px;
@@ -18,6 +21,8 @@
     background-color: #CCA866;
     border: 1px solid #CCA866;
     padding:10px;
+    color: #fff;
+    font-weight: bold;
 }
 .item img{
     width:100%;
@@ -26,8 +31,10 @@
  padding:10px 20px;
 }
 .btn-group.open .dropdown-toggle{
-    color:red;
+    color:#CCA866;
     box-shadow:none ;
+    background-color: #ffffff;
+    border: 1px solid rgba(0,0,0,.15);
 }
 .dropdown-menu{
     text-align: right;
