--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!--header-->
-<div class="title" th:include="title::title"></div>
+<div class="header" th:include="header::header"></div>
 <!--header end-->
 <!--content-->
 <div class="container goods_whole">
@@ -99,7 +99,7 @@
                         <span class="line"></span>
                     </h4>
                     <div >
-                        <a th:text=${goods_activity}></a>
+<!--                        <a th:text=${goods_activity></a>-->
                     </div>
                 </div>
                 <div class="goods_review" id="goods_review">
