--- a/src/main/resources/templates/title.html
+++ b/src/main/resources/templates/title.html
@@ -12,15 +12,14 @@
     <div class="navbar navbar-default " style="margin-bottom:0px">
         <div class="container">
             <div class="navbar-header" style="float:right">
-                <a class="navbar-brand" href="#" style="font-size: 13px"> 用戶登錄</a>
-                <a class="navbar-brand" href="#" style="font-size: 13px"> 用戶註冊</a>
+                <a class="navbar-brand" href="/user" style="font-size: 13px"> 用戶登錄</a>
+                <a class="navbar-brand" href="/user/register" style="font-size: 13px"> 用戶註冊</a>
 
                 <div class="btn-group navbar-brand">
-                    <a class="dropdown-toggle button-style" type="button" data-toggle="dropdown"  href="#" style="font-size: 13px;margin-left:0px;height:auto" aria-expanded="false" > 用戶信息</a>
+                    <a class="dropdown-toggle button-style" type="button" data-toggle="dropdown"  href="#" style="font-size: 13px;margin-left:0px;height:auto" aria-expanded="false" id="openmunu"  > 我的信息</a>
                     <ul class="dropdown-menu " role="menu" style="text-align: left;margin:1px 0px;">
-                        <li><a href="#">功能</a></li>
-                        <li><a href="#">另一个功能</a></li>
-                        <li><a href="#">其他</a></li>
+                        <li><a href="#">我的訂單</a></li>
+                        <li><a href="#">我的收藏</a></li>
                     </ul>
                 </div>
             </div>
@@ -50,6 +49,14 @@
     </div>
 
 </div>
-
 </body>
+
+<script src="/static/jquery/jquery-3.3.1.min.js"></script>
+<script>
+    $(document).ready(function(){
+        $(document).mousemove(function(e){
+            $(".openmunu").alert("123");
+        });
+    });
+</script>
 </html>
