--- a/src/main/resources/templates/user/changepw.html
+++ b/src/main/resources/templates/user/changepw.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!--header-->
-<div class="title" th:include="title::title"></div>
+<div class="header" th:include="header::header"></div>
 <!--header end-->
 
 <!--content 找回密碼-->
