修復用戶登錄頁樣式

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -27,7 +27,7 @@
     </div>
     <div class="container ">
         <div class="col-xs-4 col-sm-4" style="">
-            <a class="navbar-brand banner-icon" href="#" >
+            <a class="navbar-brand banner-icon" href="/test" >
                 <img th:src="@{/images/logo.gif}" class="img-responsive center-block" style="max-width:initial;width: 100%">
             </a>
         </div>
@@ -42,7 +42,7 @@
         <div class="col-xs-2 col-sm-2" >
             <div class="btn-group navbar-brand" role="group" style="display: inline-table;padding: 2vh 0 0 0" >
                 <button class="navbar-brand dropdown-toggle shipping-cart" data-toggle="dropdown" id="actbar" type="button"  href="#" aria-expanded="false" >
-                    <svg class="icon" aria-hidden="true">
+                    <svg class="icon" aria-hidden="true" style="width: 1.5vw;height: 1.5vw;vertical-align: middle;">
                         <use xlink:href="#icon-gouwuche"></use>
                     </svg>
                     購票中心(<span th:text="${actnum}"></span>)
