--- a/src/main/resources/static/header/css/header.css
+++ b/src/main/resources/static/header/css/header.css
@@ -164,3 +164,12 @@ a{
 .caption{
     padding-left: 5px;
 }
+
+/*首頁icon*/
+.icon{
+    width: 1em;
+    height: 1em;
+    fill: currentColor;
+    overflow: hidden;
+    vertical-align:middle;
+}
