--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -88,6 +88,7 @@
 
 <script th:src="@{/jquery/jquery-3.3.1.min.js}"></script>
 <script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/jquery/iconfont.js}"></script>
 <script th:inline="javascript">
     var single = [[${singlePerson}]];
     console.log(single.name+"/"+single.age);
