--- a/src/main/resources/templates/user/usercenter.html
+++ b/src/main/resources/templates/user/usercenter.html
@@ -16,7 +16,7 @@
 <!--header end-->
 
 <!--content 用戶中心 -->
-<div class="container user-center" >
+<div class="container user-center" th:fragment="usercenter">
     <div class="centerpage">
             <div class="slidebar">
                 <ul class="slide_item">
@@ -25,32 +25,35 @@
                         <ul>
                             <li class="option">
                                 <a  class="on"  name="userindex" onclick="open1(this);" >個人中心</a>
-                                <a class name="userinfo"   onclick="open1(this);" >用戶信息</a>
+                                <a class name="userinfo"   href="/user/userrouter?id=userinfo" >用戶信息</a>
                                 <a class name="collection"  onclick="open1(this);" >我的收藏</a>
                                 <a class name="usercomment"  onclick="open1(this);"  >我的評論</a>
                                 <a class name="userbonus"  onclick="open1(this);" >我的紅包</a>
                                 <a class name="apply"   onclick="open1(this);"  >報名清單</a>
                                 <a class name="userback"  onclick="open1(this);" >退款管理</a>
                                 <a class name="actcount"  onclick="open1(this);">活動統計</a>
-                                <a href="http://localhost:8080/user" >安全退出</a>
+                                <a href="/user" >安全退出</a>
                             </li>
                         </ul>
                     </li>
                 </ul>
             </div>
-            <div class="usercontent">
-                <div  class="text-center" th:include="userindex :: userindex"></div>
-            </div>
+<!--            <div class="usercontent">-->
+<!--                <div  th:include="/user/userindex::userindex"></div>-->
+<!--            </div>-->
     </div>
 </div>
 
 
 <!--content 用戶中心 end -->
 
-
-<div  class="text-center" th:include="footer :: copyright"></div>
+<!--footer-->
+<div  class="text-center" th:include="footer::copyright"></div>
+<!--footer end-->
+</body>
 <script th:src="@{/jquery/jquery-3.3.1.min.js}"></script>
 <script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
 <script th:src="@{/jquery/user.js}"></script>
-</body>
+<script th:src="@{/jquery/iconfont.js}"></script>
+
 </html>
